--- a/monitor/monitor.html
+++ b/monitor/monitor.html
@@ -33,36 +33,54 @@
     <script type="text/javascript">
       $(document).ready(function(){
         var zabbix_server = new $.jqzabbix()
+        var cnNameObj = {}
         // 先登录获取zabbix的auth
         zabbix_server.userLogin()
-        init()
+        // 将配置文件中的应用列表，改为更好渲染的形式
+        countryList.forEach(function(item){
+          item.service = {}
+          cnNameObj[item.name] = item.enName
+          item.hasService.forEach(function(service) {
+            item.service[service] = {
+              name: service,
+              status: ''
+            }
+          })
+        })
+        // 渲染模板
         $('#countryList').html(template('countryTpl', {list: countryList}))
+        // 执行任务
         task()
-        setInterval(function(){scrollCountry($('#listScroll'))}, 2000)
+        // 执行自动无缝滚动效果
+        setInterval(function(){
+          var obj = $('#listScroll')
+          var $first =obj.find('li:first')
+          var height = $first.height()
+          $first.animate({
+            marginTop: -height + 'px'
+          }, 1000, function() {
+          $first.css('marginTop', 0).appendTo(obj)
+          })
+        }, 2000)
+        // 执行定时任务
         setInterval(task(), 60000)
+        // 待执行的任务合集
         function task() {
           updateTime()
           getBossData()
+          getOTTData()
         }
-        function init() {
-          countryList.forEach(function(item){
-            item.service = {}
-            item.hasService.forEach(function(service) {
-              item.service[service] = {
-                name: service,
-                status: ''
-              }
-            })
-          })
-        }
+        // 定时更新时间
         function updateTime() {
           $('.time').each(function(index){
             var timezone = $(this).attr('data-timezone')
             $(this).html(moment().tz(timezone).format('HH:mm'))
           })
         }
+        // 获取BOSS服务的应用状态
         function getBossData() {
-          var aws_groupids = ['43', '46'], boss_groupids = [], boss_error = {}
+          var aws_boss_groupids = ['43', '46'], boss_groupids = [], boss_error = {}
+          // 先获取到所有 海外_国家名_BOSS 命名规则的主机组，这些都是老BOSS
           zabbix_server.queryData('hostgroup.get', {
             output: ['gourpid', 'name']
           }, function(res) {
@@ -74,6 +92,7 @@
                   boss_groupids.push(item.groupid)
                 }
               })
+              // 获取所有老BOSS的告警信息
               zabbix_server.queryData('trigger.get', {
                 'groupids': boss_groupids,
                 'only_true': 1, // 仅返回最近处于问题状态的触发器
@@ -95,39 +114,141 @@
                   updateServiceStatus(boss_error, 'BOSS')
                 }
               })
+              // 获取aws下的所有应用集，新BOSS的告警采用了应用集的形式放到了aws上，先获取到 国际名_BOSS 格式的应用集
               zabbix_server.queryData('application.get', {
-                'groupids': aws_groupids,
+                'groupids': aws_boss_groupids,
                 'output': ['applicationid', 'name']
               }, function(res) {
                 if (res.result !== undefined) {
-                  var applicationIds = []
+                  var applicationIds = [], applications = {}
                   res.result.forEach(function(item) {
                     if (item.name.search(/(\w)+_BOSS$/ig) >= 0) {
+                      var name = item.name.replace('_BOSS', '')
+                      if (boss_error[name] === undefined) {
+                        boss_error[name] = 0
+                      }
+                      if (applications[name] === undefined) {
+                        applications[name] = [item.applicationid]
+                      } else {
+                        applications[name].push(item.applicationid)
+                      }
                       applicationIds.push(item.applicationid)
                     }
                   })
-                  console.log(applicationIds)
+                  // 循环应用集，获取新BOSS的告警数量
+                  for (var x in applications) {
+                    (function(name,ids){
+                      zabbix_server.queryData('trigger.get', {
+                        'applications': ids,
+                        'only_true': 1, // 仅返回最近处于问题状态的触发器
+                        'monitored': 1, //属于受监控主机的已启用触发器
+                        'min_severity': 2,
+                        'active': 1, // 只返回属于受监控主机的启用的触发器
+                        'filter': {
+                          'value': '1'
+                        },
+                        'output': ['description', 'hosts', 'groups', 'lastchange', 'priority']
+                      }, function(res) {
+                        boss_error[name] += res.result.length
+                        updateServiceStatus(boss_error, 'BOSS')
+                      })
+                    })(x, applications[x])
+                  }
+                  // 获取所有新BOSS的告警数量
+                  zabbix_server.queryData('trigger.get', {
+                    'applications': applicationIds,
+                    'only_true': 1, // 仅返回最近处于问题状态的触发器
+                    'monitored': 1, //属于受监控主机的已启用触发器
+                    'min_severity': 2,
+                    'active': 1, // 只返回属于受监控主机的启用的触发器
+                    'filter': {
+                      'value': '1'
+                    },
+                    'output': ['description', 'hosts', 'groups', 'lastchange', 'priority']
+                  }, function(res) {
+                    var applicationErrors = res.result.length
+                    // 获取aws上所有的告警数量
+                    zabbix_server.queryData('trigger.get', {
+                      'groupids': aws_boss_groupids,
+                      'only_true': 1, // 仅返回最近处于问题状态的触发器
+                      'monitored': 1, //属于受监控主机的已启用触发器
+                      'min_severity': 2,
+                      'active': 1, // 只返回属于受监控主机的启用的触发器
+                      'filter': {
+                        'value': '1'
+                      },
+                      'output': ['description', 'hosts', 'groups', 'lastchange', 'priority']
+                    }, function(res) {
+                      // aws的告警数量 = aws主机组的告警数量 - 属于新BOSS应用集告警数量
+                      boss_error['AWS'] = res.result.length - applicationErrors
+                      updateServiceStatus(boss_error, 'BOSS')
+                    })
+                  })
                 }
-                // boss_error['AWS'] = res.result.length
-                // updateServiceStatus(boss_error, 'BOSS')
+                updateServiceStatus(boss_error, 'BOSS')
               })
             }
           })
         }
+        // 获取OTT流量
+        function getOTTData() {
+          var aws_ott_groupids = ['36', '32', '57'], ott_groupids = {}, ott_error = {}
+          // 先获取到所有 海外_国家名_BOSS 命名规则的主机组，这些都是老BOSS
+          zabbix_server.queryData('hostgroup.get', {
+            output: ['gourpid', 'name']
+          }, function(res) {
+            if (res.result !== undefined) {
+              res.result.forEach(function(item) {
+                if (item.name.search(/^CDN_(\S)+(_(\w)+)*$/ig) >= 0) {
+                  var countryName = cnNameObj[item.name.split('_')[1]]
+                  ott_error[countryName] = 0
+                  ott_groupids[countryName] = item.groupid
+                }
+              })
+              updateServiceStatus(ott_error, 'OTT')
+              // 循环获取每个组告警信息
+              for (var x in ott_groupids) {
+                (function(name, groupid){
+                  zabbix_server.queryData('trigger.get', {
+                    'groupids': groupid,
+                    'only_true': 1, // 仅返回最近处于问题状态的触发器
+                    'monitored': 1, //属于受监控主机的已启用触发器
+                    'min_severity': 2,
+                    'active': 1, // 只返回属于受监控主机的启用的触发器
+                    'filter': {
+                      'value': '1'
+                    },
+                    'output': ['description', 'hosts', 'groups', 'lastchange', 'priority']
+                  }, function(res) {
+                    ott_error[name] = res.result.length
+                    updateServiceStatus(ott_error, 'OTT')
+                  })
+                })(x, ott_groupids[x])
+              }
+              // 获取AWS的告警信息
+              zabbix_server.queryData('trigger.get', {
+                'groupids': aws_ott_groupids,
+                'only_true': 1, // 仅返回最近处于问题状态的触发器
+                'monitored': 1, //属于受监控主机的已启用触发器
+                'min_severity': 2,
+                'active': 1, // 只返回属于受监控主机的启用的触发器
+                'filter': {
+                  'value': '1'
+                },
+                'output': ['description', 'hosts', 'groups', 'lastchange', 'priority']
+              }, function(res) {
+                ott_error['AWS'] = res.result.length
+                updateServiceStatus(ott_error, 'OTT')
+              })
+            }
+          })
+        }
+        // 更新某个服务的应用状态
         function updateServiceStatus(error_data, type) {
           for (var x in error_data) {
             var className = error_data[x] == 0 ? 'good': error_data[x] > 5 ? 'bad' : 'well'
             $('#' + type + '-' + x).attr('class', 'status ' + className)
           }
-        }
-        function scrollCountry(obj){
-          var $first =obj.find('li:first')
-          var height = $first.height()
-          $first.animate({
-            marginTop: -height + 'px'
-          }, 1000, function() {
-          $first.css('marginTop', 0).appendTo(obj)
-          })
         }
       })
     </script>
