--- a/monitor/monitor.html
+++ b/monitor/monitor.html
@@ -4,8 +4,10 @@
 <head>
   <meta charset="utf-8">
   <title>监控汇总</title>
+  <link rel="stylesheet" href="./css/swiper.min.css?version=1528769604144">
   <link rel="stylesheet" href="./css/monitor.css?version=1528769604144">
   <script src="./js/jquery.min.js?version=1528769604144" charset="utf-8"></script>
+  <script src="./js/swiper.min.js?version=1528769604144" charset="utf-8"></script>
   <script src="./js/zabbix.js?version=1528769604144" charset="utf-8"></script>
   <script src="./js/template-web.js?version=1528769604144" charset="utf-8"></script>
   <script src="./js/moment.js?version=1528769604144" charset="utf-8"></script>
@@ -17,19 +19,26 @@
   <div id="countryList"></div>
   <script id="countryTpl" type="text/html">
     <div class="title">服务状态监控</div>
-    <ul id="listScroll" class="list">
-      {{each list}}
-      <li>
-        <div class="icon"><img src="./img/country/{{$value.enName}}.jpg" width="30px" /></div>
-        <div class="name">{{$value.name}}</div>
-        <div class="time" data-timezone="{{$value.timezone}}"></div>
-        <div class="service">
-          {{each $value.service service}}
-          <span class="status {{service.status}}" id="{{service.name}}-{{$value.enName}}">{{service.name}}</span> {{/each}}
-        </div>
-      </li>
-      {{/each}}
-    </ul>
+    <!-- <ul id="listScroll" class="list"> -->
+    <div class="swiper-container">
+      <ul class="list swiper-wrapper">
+        {{each list}}
+        {{if $index%22 === 0}}<div class="swiper-slide">{{/if}}
+        <li>
+          <div class="icon"><img src="./img/country/{{$value.enName}}.jpg" width="30px" /></div>
+          <div class="name">{{$value.name}}</div>
+          <div class="time" data-timezone="{{$value.timezone}}"></div>
+          <div class="service">
+            {{each $value.service service}}
+            <span class="status {{service.status}}" id="{{service.name}}-{{$value.enName}}">{{service.name}}</span> {{/each}}
+          </div>
+        </li>
+        {{if ($index-21)%22 === 0}}</div>{{/if}}
+        {{/each}}
+      </ul>
+      <div class="swiper-pagination"></div>
+    </div>
+    <!-- </ul> -->
   </script>
   <script type="text/javascript">
     $(document).ready(function() {
@@ -52,19 +61,19 @@
       $('#countryList').html(template('countryTpl', {
         list: countryList
       }))
+      // 执行翻页
+      var swiper = new Swiper('.swiper-container', {
+        direction: 'vertical',
+        pagination: {
+          el: '.swiper-pagination',
+          clickable: true,
+          renderBullet: function (index, className) {
+            return '<span class="' + className + '">' + (index + 1) + '</span>';
+          },
+        },
+      })
       // 执行任务
       task()
-      // 执行自动无缝滚动效果
-      setInterval(function() {
-        var obj = $('#listScroll')
-        var $first = obj.find('li:first')
-        var height = $first.height()
-        $first.animate({
-          marginTop: -height + 'px'
-        }, 1000, function() {
-          $first.attr('style', 'margin-top:0').appendTo(obj)
-        })
-      }, 2000)
       // 执行定时任务
       setInterval(task(), 60000)
       // 待执行的任务合集
