修改服务监控

--- a/monitor/devops.html
+++ b/monitor/devops.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>DevOps监控</title>
+    <link rel="stylesheet" href="./css/devops.css?version=1528769604144">
   </head>
   <body>
-    DevOps监控
+    <div></div>
   </body>
 </html>
