--- a/monitor/devops.html
+++ b/monitor/devops.html
@@ -6,6 +6,59 @@
     <link rel="stylesheet" href="./css/devops.css?version=1528769604144">
   </head>
   <body>
-    <div></div>
+    <div class="content">
+      <div class="item">
+        <img src="./img/devops/1.jpg" />
+        <div class="status"><img src="./img/devops/success.png" />日志的内容：巴拉巴拉巴拉日志的内容</div>
+      </div>
+      <div class="split">
+        <div class="line"></div>
+      </div>
+      <div class="item">
+        <img src="./img/devops/2.jpg" />
+        <div class="status"><img src="./img/devops/success.png" />日志的内容：巴拉巴拉巴拉</div>
+      </div>
+      <div class="split">
+        <div class="line"></div>
+      </div>
+      <div class="item">
+        <img src="./img/devops/3.jpg" />
+        <div class="status"><img src="./img/devops/success.png" />日志的内容：巴拉巴拉巴拉日志的内容</div>
+      </div>
+      <div class="split">
+        <div class="line"></div>
+      </div>
+      <div class="item">
+        <img src="./img/devops/4.jpg" />
+        <div class="status"><img src="./img/devops/success.png" />日志的内容：巴拉巴拉巴拉</div>
+      </div>
+    </div>
+    <div class="content">
+      <div class="item">
+        <img src="./img/devops/5.jpg" />
+        <div class="status"><img src="./img/devops/wait.png" />日志的内容：巴拉巴拉巴拉</div>
+      </div>
+      <div class="split">
+        <div class="line"></div>
+      </div>
+      <div class="item">
+        <img src="./img/devops/6.jpg" />
+        <div class="status"><img src="./img/devops/wait.png" />日志的内容：巴拉巴拉巴拉</div>
+      </div>
+      <div class="split">
+        <div class="line"></div>
+      </div>
+      <div class="item">
+        <img src="./img/devops/7.jpg" />
+        <div class="status"><img src="./img/devops/wait.png" />日志的内容：巴拉巴拉巴拉</div>
+      </div>
+      <div class="split">
+        <div class="line"></div>
+      </div>
+      <div class="item">
+        <img src="./img/devops/8.jpg" />
+        <div class="status"><img src="./img/devops/error.png" />日志的内容：巴拉巴拉巴拉</div>
+      </div>
+    </div>
   </body>
 </html>
