--- a/monitor/index.html
+++ b/monitor/index.html
@@ -48,7 +48,7 @@
     <div class="item"><label>支付：</label><p id="apppay"></p></div>
   </div>
   <div class="total">
-    <div class="item">
+    <div class="item" style="display:none">
       <div class="content">
         <div class="title">StarTimesAPP在线用户数</div>
         <div id="apponline" class="number"></div>
@@ -64,6 +64,8 @@
       <div class="content">
         <div class="title">四达CDN总带宽(<span id="networdUnit"></span>bit/s)</div>
         <div id="network" class="number"></div>
+        <div class="title" style="margin-top:30px;">带宽占比Top5</div>
+        <div id="networkTop5" style="width:100%;height:180px;"></div>
       </div>
     </div>
     <div class="item" style="display:none">
@@ -78,6 +80,7 @@
   <script type="text/javascript">
     echarts.registerMap('customMap', mapJson)
     var myChart = echarts.init(document.getElementById('main'))
+    var top5Chart = echarts.init(document.getElementById('networkTop5'))
     var option = {
       backgroundColor: '#333333',
       geo: {
