--- a/monitor/error.html
+++ b/monitor/error.html
@@ -103,6 +103,9 @@
                 case '0701_AWS_研究院':
                   groupName = 'AWS OTT后台'
                   break;
+                case '研究院测试组':
+                  groupName = 'AWS OTT后台'
+                  break;
                 case '南非上云_OTT':
                   groupName = '南非OTT前端'
                   break;
