--- a/monitor/devops.html
+++ b/monitor/devops.html
@@ -84,8 +84,8 @@
       updateLog(1, 'git代码已提交', 'success')
       updateLog(2, '自动化构建执行已成功', 'success')
       updateLog(3, '自动化测试执行已成功', 'success')
-      updateLog(4, '测试出现bug', 'error')
-      updateLog(5, '等待第四步执行完成', 'wait')
+      updateLog(4, '测试出现bug', 'success')
+      updateLog(5, '等待第四步执行完成', 'error')
       updateLog(6, '等待第五步执行完成', 'wait')
       updateLog(7, '等待第六步执行完成', 'wait')
       updateLog(8, '等待第七步执行完成', 'wait')
