修改获取上云站状态错误

--- a/monitor/devops.html
+++ b/monitor/devops.html
@@ -8,28 +8,28 @@
   <body>
     <div class="content">
       <div class="item">
-        <img src="./img/devops/1.jpg" />
+        <img src="./img/devops/1.png" />
         <div class="status"></div>
       </div>
       <div class="split left">
         <div class="line"><div class="arrow"></div></div>
       </div>
       <div class="item">
-        <img src="./img/devops/2.jpg" />
+        <img src="./img/devops/2.png" />
         <div class="status"></div>
       </div>
       <div class="split left">
         <div class="line"><div class="arrow"></div></div>
       </div>
       <div class="item">
-        <img src="./img/devops/3.jpg" />
+        <img src="./img/devops/3.png" />
         <div class="status"></div>
       </div>
       <div class="split left">
         <div class="line"><div class="arrow"></div></div>
       </div>
       <div class="item">
-        <img src="./img/devops/4.jpg" />
+        <img src="./img/devops/4.png" />
         <div class="status"></div>
       </div>
     </div>
@@ -40,28 +40,28 @@
     </div>
     <div class="content" style="direction: rtl">
       <div class="item">
-        <img src="./img/devops/5.jpg" />
+        <img src="./img/devops/5.png" />
         <div class="status" style="direction:ltr"></div>
       </div>
       <div class="split right">
         <div class="line"><div class="arrow"></div></div>
       </div>
       <div class="item">
-        <img src="./img/devops/6.jpg" />
+        <img src="./img/devops/6.png" />
         <div class="status" style="direction:ltr"></div>
       </div>
       <div class="split right">
         <div class="line"><div class="arrow"></div></div>
       </div>
       <div class="item">
-        <img src="./img/devops/7.jpg" />
+        <img src="./img/devops/7.png" />
         <div class="status" style="direction:ltr"></div>
       </div>
       <div class="split right">
         <div class="line"><div class="arrow"></div></div>
       </div>
       <div class="item">
-        <img src="./img/devops/8.jpg" />
+        <img src="./img/devops/8.png" />
         <div class="status" style="direction:ltr"></div>
       </div>
     </div>
