--- a/monitor/index.html
+++ b/monitor/index.html
@@ -19,9 +19,10 @@
     <span></span>
     <span></span>
     <div class="title">全局调度系统</div>
-    <div class="item"><label>成功率：</label><p id="chenggonglv">0</p></div>
-    <div class="item"><label>响应时间：</label><p id="xiangyingshijian">0</p></div>
-    <div class="item"><label>QPS：</label><p id="qps">0</p></div>
+    <div class="item"><label>HTTP成功率：</label><p id="chenggonglv">0</p></div>
+    <div class="item"><label>DNS成功率：</label><p id="chenggonglv2">0</p></div>
+    <div class="item"><label>HTTP响应时间：</label><p id="xiangyingshijian">0</p></div>
+    <div class="item"><label>HTTP QPS：</label><p id="qps">0</p></div>
   </div>
   <div id="radar" class="radar" onclick="goto('./to_radar.html')">
     <span></span>
