修改首页样式

--- a/monitor/index.html
+++ b/monitor/index.html
@@ -142,8 +142,9 @@
           showEffectOn: 'render',
           rippleEffect: {
             period: 4,
-            scale: 3,
-            brushType: 'stroke'
+            scale: 2,
+            brushType: 'stroke',
+            // brushType: 'fill'
           },
           data: []
         }
