--- a/monitor/video-player.html
+++ b/monitor/video-player.html
@@ -16,22 +16,8 @@
   </div>
   <script src="./config/video-config.js?version=1528769604144" charset="utf-8"></script>
   <script type="text/javascript">
-    window.onload = function() {
-      var locationUrl = window.location.href;
-      var parent = locationUrl.split("?")[1].split("=")[1];
-      var width = localStorage.getItem("width") || 400
-      var height = localStorage.getItem("height") || 300
-      var vlc = getVLC("vlc")
-      vlc.style.width = width + 'px'
-      vlc.style.height = height + 'px'
-      vlc.playlist.playItem(vlc.playlist.add(videoData.videoList[parent].url))
-      vlc.audio.mute = true
-      setInterval(function(){
-        console.log(1111111111111, vlc.input.state)
-      }, 1000)
-    }
+    var flag =  true
     var itemId = 0;
-
     function getVLC(name) {
       if (window.document[name]) {
         return window.document[name]
@@ -42,6 +28,33 @@
       } else {
         return document.getElementById(name)
       }
+    }
+
+    function ismute() {
+      var vlc = getVLC("vlc")
+      flag = vlc.audio.mute
+      vlc.audio.mute = !flag
+    }
+    window.onload = function() {
+      var locationUrl = window.location.href;
+      var parent = locationUrl.split("?")[1].split("=")[1];
+      var width = localStorage.getItem("width") || 400
+      var height = localStorage.getItem("height") || 300
+      var vlc = getVLC("vlc")
+      vlc.style.width = width + 'px'
+      vlc.style.height = height + 'px'
+      vlc.playlist.playItem(vlc.playlist.add(videoData.videoList[parent].url))
+      vlc.audio.mute = true
+      flag = !vlc.audio.mute
+      var time = ''
+      setInterval(function(){
+        if(vlc.input.state > 4 || time === vlc.input.time) {
+          top.window.showError(parent, 'red')
+        } else {
+          top.window.showError(parent, 'green')
+        }
+        time = vlc.input.time
+      }, 10000)
     }
   </script>
 </body>
