修改首页样式

--- a/monitor/index.html
+++ b/monitor/index.html
@@ -133,16 +133,16 @@
         },
         {
           name: 'cache节点告警',
-          type: 'scatter',
-          // type: 'effectScatter',
+          // type: 'scatter',
+          type: 'effectScatter',
           coordinateSystem: 'geo',
           zlevel: 2,
-          symbol: footballPath,
-          symbolSize: 13,
+          // symbol: footballPath,
+          symbolSize: 12,
           showEffectOn: 'render',
           rippleEffect: {
             period: 4,
-            scale: 2,
+            scale: 4,
             brushType: 'stroke',
             // brushType: 'fill'
           },
