修改首页top显示值

--- a/monitor/index.html
+++ b/monitor/index.html
@@ -67,7 +67,7 @@
   <div class="total top10">
     <div class="item">
       <div class="content">
-        <div class="title">带宽占比Top10</div>
+        <div class="title">带宽占比Top<span id="networktop"></span></div>
         <div id="networkTop5" style="width:350px;height:250px;"></div>
       </div>
     </div>
