--- a/monitor/index.html
+++ b/monitor/index.html
@@ -180,6 +180,9 @@
   <script src="./js/template-web.js?version=1528769604144" charset="utf-8"></script>
   <script id="ledTpl" type="text/html">
     {{each value}}
+    {{if $value=='.'}}
+    <div class="led-point"></div>
+    {{else}}
     <ul class="led-number">
 			<li><img src="{{if $value=='1' || $value=='4'}}./img/back.png{{else}}./img/front.png{{/if}}" width="100%" height="100%"></li>
 			<li><img src="{{if $value=='1' || $value=='2' || $value=='3' || $value=='7'}}./img/back.png{{else}}./img/front.png{{/if}}" width="100%" height="100%"></li>
@@ -188,7 +191,8 @@
 			<li><img src="{{if $value=='1' || $value=='3' || $value=='4' || $value=='5' || $value=='7' || $value=='9'}}./img/back.png{{else}}./img/front.png{{/if}}" width="100%" height="100%"></li>
 			<li><img src="{{if $value=='2'}}./img/back.png{{else}}./img/front.png{{/if}}" width="100%" height="100%"></li>
 			<li><img src="{{if $value=='1' || $value=='4' || $value=='7'}}./img/back.png{{else}}./img/front.png{{/if}}" width="100%" height="100%"></li>
-		</ul>
+    </ul>
+    {{/if}}
     {{/each}}
   </script>
   <script src="./js/main.js?version=1528769604144" charset="utf-8"></script>
