--- a/monitor/index.html
+++ b/monitor/index.html
@@ -60,7 +60,21 @@
     <div class="item">
       <div class="content">
         <div class="title">四达CDN总带宽(<span id="networdUnit"></span>bit/s)</div>
-        <div id="network" class="number"></div>
+        <div class="network_led">
+          <div class="network_led_float">
+            <div class="network_title">四达STAR:30%</div>
+            <div class="network_number">
+              <div id="network" class="number" ></div>
+            </div>
+          </div>
+          <div class="network_line"></div>
+          <div class="network_led_float">
+            <div class="network_title">AWS:70%</div>
+            <div class="network_number">
+              <div id='network2' class="number" ></div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
