--- a/monitor/index.html
+++ b/monitor/index.html
@@ -23,6 +23,8 @@
     <div class="item"><label>DNS成功率：</label><p id="chenggonglv2">0</p></div>
     <div class="item"><label>HTTP响应时间：</label><p id="xiangyingshijian">0</p></div>
     <div class="item"><label>HTTP QPS：</label><p id="qps">0</p></div>
+    <div class="item"><label>总带宽：</label><p id="totalBandWidth">0</p></div>
+    <div class="item"><label>全局在线用户数：</label><p id="totalUsers">0</p></div>
   </div>
   <div id="radar" class="radar" onclick="goto('./to_radar.html')">
     <span></span>
@@ -48,35 +50,47 @@
     <div class="item"><label>订单：</label><p id="apporder"></p></div>
     <div class="item"><label>支付：</label><p id="apppay"></p></div>
   </div>
-  <div class="total user">
-    <div class="item">
-      <div class="content">
-        <div class="title">四达CDN在线用户数</div>
-        <div id="user" class="number"></div>
-      </div>
-    </div>
-  </div>
   <div class="total network">
-    <div class="item">
-      <div class="content">
-        <div class="title">四达CDN总带宽(<span id="networdUnit"></span>bit/s)</div>
-        <div class="network_led">
-          <div class="network_led_float">
-            <div class="network_title">四达STAR:30%</div>
-            <div class="network_number">
-              <div id="network" class="number" ></div>
-            </div>
+      <div class="item">
+          <div class="content">
+              <div class="title">CDN带宽分布(<span id="networdUnit"></span>bps)</div>
+              <div class="network_led">
+                  <div class="network_led_float">
+                      <div class="network_title">STAR:30%</div>
+                      <div class="network_number">
+                          <div id="networkStar" class="number" ></div>
+                      </div>
+                  </div>
+                  <div class="network_line"></div>
+                  <div class="network_led_float">
+                      <div class="network_title">AWS:70%</div>
+                      <div class="network_number">
+                          <div id='networkAWS' class="number" ></div>
+                      </div>
+                  </div>
+              </div>
           </div>
-          <div class="network_line"></div>
-          <div class="network_led_float">
-            <div class="network_title">AWS:70%</div>
-            <div class="network_number">
-              <div id='network2' class="number" ></div>
-            </div>
-          </div>
-        </div>
       </div>
-    </div>
+  </div>
+  <div class="total user">
+      <div class="item">
+          <div class="content">
+              <div class="title">CDN在线用户分布</div>
+              <div class="user_box">
+                  <div class="user_left">
+                      <div class="user_left_title">STAR:30%</div>
+                      <div id="user_left" class="number user_left_number"></div>
+                  </div>
+                  <div class="user_center">
+                      <span></span>
+                  </div>
+                  <div class="user_right">
+                      <div class="user_right_title">AWS:70%</div>
+                      <div id="user_right" class="number user_right_number"></div>
+                  </div>
+              </div>
+          </div>
+      </div>
   </div>
   <div class="total top10">
     <div class="item">
@@ -86,6 +100,7 @@
       </div>
     </div>
   </div>
+  <div class="instantBandwidth">StarCDN瞬时带宽(Gbps):<span id="instantBandwidth"></span></div>
   <script src="./map/africa.js?version=1528769604144" charset="utf-8"></script>
   <script src="./js/config.js?version=1528769604144" charset="utf-8"></script>
   <script type="text/javascript">
