--- a/monitor/devops.html
+++ b/monitor/devops.html
@@ -1,107 +1,201 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>DevOps监控</title>
-    <link rel="stylesheet" href="./css/devops.css?version=1528769604144">
-  </head>
-  <body>
-    <div class="content">
-      <div class="item">
-        <img src="./img/devops/1.png" />
-        <div class="status"></div>
-      </div>
-      <div class="split left">
-        <div class="line"><div class="arrow"></div></div>
-      </div>
-      <div class="item">
-        <img src="./img/devops/2.png" />
-        <div class="status"></div>
-      </div>
-      <div class="split left">
-        <div class="line"><div class="arrow"></div></div>
-      </div>
-      <div class="item">
-        <img src="./img/devops/3.png" />
-        <div class="status"></div>
-      </div>
-      <div class="split left">
-        <div class="line"><div class="arrow"></div></div>
-      </div>
-      <div class="item">
-        <img src="./img/devops/4.png" />
-        <div class="status"></div>
-      </div>
+<head>
+  <meta charset="utf-8">
+  <title>DevOps监控</title>
+  <link rel="stylesheet" href="./css/devops.css?version=1528769604144">
+  <style>
+  </style>
+</head>
+<body>
+<div>
+  <div class="content">
+    <div class="item">
+      <img src="./img/devops/1.png" />
+      <div class="status"></div>
     </div>
-    <div class="content down clear">
-      <div class="split down">
-        <div class="line"><div class="arrow"></div></div>
-      </div>
+    <div class="split left">
+      <div class="line"><div class="arrow"></div></div>
     </div>
-    <div class="content" style="direction: rtl">
-      <div class="item">
-        <img src="./img/devops/5.png" />
-        <div class="status" style="direction:ltr"></div>
-      </div>
-      <div class="split right">
-        <div class="line"><div class="arrow"></div></div>
-      </div>
-      <div class="item">
-        <img src="./img/devops/6.png" />
-        <div class="status" style="direction:ltr"></div>
-      </div>
-      <div class="split right">
-        <div class="line"><div class="arrow"></div></div>
-      </div>
-      <div class="item">
-        <img src="./img/devops/7.png" />
-        <div class="status" style="direction:ltr"></div>
-      </div>
-      <div class="split right">
-        <div class="line"><div class="arrow"></div></div>
-      </div>
-      <div class="item">
-        <img src="./img/devops/8.png" />
-        <div class="status" style="direction:ltr"></div>
-      </div>
+    <div class="item">
+      <img src="./img/devops/2.png" />
+      <div class="status"></div>
     </div>
-    <script src="./js/jquery.min.js?version=1528769604144" charset="utf-8"></script>
-    <script src="./js/zabbix.js?version=1528769604144" charset="utf-8"></script>
-    <script type="text/javascript">
+    <div class="split left">
+      <div class="line"><div class="arrow"></div></div>
+    </div>
+    <div class="item">
+      <img src="./img/devops/3.png" />
+      <div class="status"></div>
+    </div>
+    <div class="split left">
+      <div class="line"><div class="arrow"></div></div>
+    </div>
+    <div class="item">
+      <img src="./img/devops/4.png" />
+      <div class="status"></div>
+    </div>
+  </div>
+  <div class="content down clear">
+    <div class="split down">
+      <div class="line"><div class="arrow"></div></div>
+    </div>
+  </div>
+  <div class="content" style="direction: rtl">
+    <div class="item">
+      <img src="./img/devops/5.png" />
+      <div class="status" style="direction:ltr"></div>
+    </div>
+    <div class="split right">
+      <div class="line"><div class="arrow"></div></div>
+    </div>
+    <div class="item">
+      <img src="./img/devops/6.png" />
+      <div class="status" style="direction:ltr"></div>
+    </div>
+    <div class="split right">
+      <div class="line"><div class="arrow"></div></div>
+    </div>
+    <div class="item">
+      <img src="./img/devops/7.png" />
+      <div class="status" style="direction:ltr"></div>
+    </div>
+    <div class="split right">
+      <div class="line"><div class="arrow"></div></div>
+    </div>
+    <div class="item">
+      <img src="./img/devops/8.png" />
+      <div class="status" style="direction:ltr"></div>
+    </div>
+  </div>
+</div>
+<script src="./js/jquery.min.js?version=1528769604144" charset="utf-8"></script>
+<script src="./js/zabbix_devops.js?version=1528769604144" charset="utf-8"></script>
+<script type="text/javascript">
     var zabbix_server = new $.jqzabbix()
     // 先登录获取zabbix的auth
     zabbix_server.userLogin()
     zabbix_server.queryData('item.get', {
-      // 'groupids': [groupid],
-      'application': 'Network', // 只查询Network的应用集
-      'selectGroups': ['name'], // 同时查出所属的主机组信息
-      'selectHosts': ['name'], // 同时查出所属主机的信息
-      'search': {
-        'name': 'Outgoing',
-      },
-      'output': ['itemid', 'hosts', 'key_', 'name', 'lastvalue']
+        // 'groupids': [groupid],
+        'application': 'build_info', // 只查询Network的应用集  //构建
+        'selectGroups': ['构建-部署-测试'], // 同时查出所属的主机组信息
+        'selectHosts': ['构建部署一体化'], // 同时查出所属主机的信息
+        'active': 1, // 只返回属于受监控主机的启用的触发器
+        'output': ['itemid', 'hosts', 'key_', 'name', 'lastvalue']
     }, function(res) {
-      updateLog(1, 'git代码已提交', 'success')
-      updateLog(2, '自动化构建执行已成功', 'success')
-      updateLog(3, '自动化测试执行已成功', 'success')
-      updateLog(4, '测试出现bug', 'success')
-      updateLog(5, '等待第四步执行完成', 'error')
-      updateLog(6, '等待第五步执行完成', 'wait')
-      updateLog(7, '等待第六步执行完成', 'wait')
-      updateLog(8, '等待第七步执行完成', 'wait')
-    })
-    function updateLog(step, log, type) {
-      $('.item').each(function(index){
-        if (step == index + 1) {
-          $(this).find('.status').html('<img src="./img/devops/' + type + '.png" />' + log)
-          var $nextSplit = index === 3 ? $(this).parent().next() : $(this).next()
-          if ($nextSplit) {
-            $nextSplit.find('.line').attr('class', 'line ' + type)
-            $nextSplit.find('.arrow').attr('class', 'arrow ' + type)
-          }
+        console.log('build_info-----',res);
+        var lastValueArray=[];
+        var arr = res.result;
+        if(res.result.length>0){
+            arr.map(item=>{
+                if(item.lastvalue!=''){
+                lastValueArray.push(item)
+            }
+        })
         }
-      })
+        if(lastValueArray.length==0){
+            updateLog(2, '未执行', 'wait')
+        }else{
+            var str ='';
+            var state='';
+            lastValueArray.map(item=>{
+                if(item.name.indexOf('状态')>-1){
+                  state = item.lastvalue;
+                }
+            if(state!='0'&&state!=0&&state!='') {
+                if (item.name.indexOf('tag') > -1) {
+                    str = str + item.lastvalue + '</br>';
+                }
+                if (item.name.indexOf('时间') > -1) {
+                    str = str + item.lastvalue;
+                }
+                updateLog(2, str, state);
+            }else{
+                updateLog(2, '未执行', 'wait')
+            }
+            });
+
+        }
+        updateLog(1, '', 'success')
+        /*updateLog(2, '自动化构建执行已成功', 'success')
+        updateLog(3, '自动化测试执行已成功', 'success')*/
+        updateLog(4, '', 'wait')
+        updateLog(5, '', 'wait')
+        updateLog(6, '', 'wait')
+        updateLog(7, '', 'wait')
+        updateLog(8, '', 'wait')
+    });
+    zabbix_server.queryData('item.get', {
+        // 'groupids': ['92'],
+        'application': 'auto_info', // 只查询Network的应用集 //自动化测试
+        'selectGroups': ['构建-部署-测试'], // 同时查出所属的主机组信息
+        'selectHosts': ['构建部署一体化'], // 同时查出所属主机的信息
+        'active': 1, // 只返回属于受监控主机的启用的触发器
+        'output': ['itemid', 'hosts', 'key_', 'name', 'lastvalue']
+    }, function(res) {
+        console.log('auto_info-----',res);
+        var lastValueArray=[];
+        var arr = res.result;
+        if(res.result.length>0){
+          arr.map(item=>{
+              if(item.lastvalue!=''){
+                lastValueArray.push(item)
+            }
+          })
+        }
+        if(lastValueArray.length==0){
+            updateLog(3, '未执行', 'wait')
+        }else{
+            var str ='';
+            var state='';
+            lastValueArray.map(item=>{
+                if(item.name.indexOf('状态')>-1){
+                   state = item.lastvalue;
+            }
+            if(state!='0'&&state!=0&&state!=''){
+                if(item.name.indexOf('tag')>-1){
+                    str =str+ 'tag:'+item.lastvalue+'</br>';
+                }
+                if(item.name.indexOf('总数')>-1){
+                    str =str+ ' sum:'+item.lastvalue;
+                }
+                if(item.name.indexOf('成功')>-1){
+                    str =str+ ' suc:'+item.lastvalue;
+                }
+                if(item.name.indexOf('失败')>-1){
+                    str =str+ ' fai:'+item.lastvalue+'</br>';
+                }
+                if(item.name.indexOf('时间')>-1){
+                    str =str+ ' time:'+item.lastvalue;
+                }
+                updateLog(3, str, state)
+            }else{
+                updateLog(3, '未执行', 'wait')
+            }
+           });
+
+        }
+        updateLog(1, '', 'success')
+        /*updateLog(2, '自动化构建执行已成功', 'success')
+        updateLog(3, '自动化测试执行已成功', 'success')*/
+        updateLog(4, '', 'wait')
+        updateLog(5, '', 'wait')
+        updateLog(6, '', 'wait')
+        updateLog(7, '', 'wait')
+        updateLog(8, '', 'wait')
+    });
+    function updateLog(step, log, type) {
+        $('.item').each(function(index){
+            if (step == index + 1) {
+                $(this).find('.status').html('<img src="./img/devops/' + type + '.png" />' + log)
+                var $nextSplit = index === 3 ? $(this).parent().next() : $(this).next()
+                if ($nextSplit) {
+                    $nextSplit.find('.line').attr('class', 'line ' + type)
+                    $nextSplit.find('.arrow').attr('class', 'arrow ' + type)
+                }
+            }
+        })
     }
-    </script>
-  </body>
+</script>
+</body>
 </html>
