1.修改地图比例

--- a/monitor/index.html
+++ b/monitor/index.html
@@ -118,6 +118,8 @@
         zoom: 1.1,
         top: '10%',
         left: '30%',
+        width: '48%',
+        height: '80%',
         itemStyle: {
           areaColor: '#151515',
           borderColor: '#555555'
