--- a/monitor/index.html
+++ b/monitor/index.html
@@ -118,8 +118,7 @@
         zoom: 1.1,
         top: '10%',
         left: '30%',
-        width: '48%',
-        height: '80%',
+        aspectScale: 0.9,
         itemStyle: {
           areaColor: '#151515',
           borderColor: '#555555'
